[package]
name = "max32660-hal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
max32660-pac = {version = "0.1.0", features = ["rt"]}
void = {version = "1.0.2", default-features = false}

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.6"

[features]
doc = []
rt = ["max32660-pac/rt"]
default = ["rt"]